[package]
name = "sra-agent"
version = "0.2.6"
description = 'SRA Agent'
readme = "README.md"
homepage = "https://github.com/flaviuvlaicu/sra"
repository = "https://github.com/flaviuvlaicu/sra"
license = 'MPL-2.0'
keywords = ["sra"]
authors = ["Flaviu Vlaicu"]
edition = "2021"

include = [
  "Cargo.toml",
  "LICENSE",
  "sample_agent.yaml",
  "src/**/*",
  "*help.arg",
]

[lints]
workspace = true

[dependencies]
tokio = { version = "1.43.1", default-features = false, features = [
  "macros",
  "rt",
  "time",
  "rt-multi-thread",
  "net",
  "io-util",
  "sync",
] }
futures-util = { version = "0.3.31", default-features = false }
tokio-util = { version = "0.7.12", default-features = false }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.133", default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
uuid = { version = "1.11.0", default-features = false }
sysinfo = { version = "0.30", default-features = false }
futures-channel = { version = "0.3.31", features = [
  "sink",
], default-features = false }
udp-stream = { version = "0.0.11", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
hmac = { version = "0.12.1", default-features = false }
dirs = { version = "5.0.1", default-features = false }
tracing = { version = "0.1.41", default-features = false, features = [
  "attributes",
] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = [
  "fmt",
  "ansi",
  "json",
] }
tracing-appender = { version = "0.2.3", default-features = false }
clap_lex = { version = "0.7.3", default-features = false }
thiserror = { version = "1.0.69", default-features = false }
portable-pty = "0.8"
anyhow = "1"

sra-core = { path = "../sra-core" , default-features = false }
sra-network = { path = "../sra-network" , default-features = false }

[target.'cfg(unix)'.dependencies]
daemonize = { version = "0.5.0", default-features = false }
