[package]
name = "sra-token"
version = "0.2.6"
description = 'Token generator for SRA'
readme = "README.md"
homepage = "https://github.com/flaviuvlaicu/sra"
repository = "https://github.com/flaviuvlaicu/sra"
license = 'MPL-2.0'
keywords = ["sra"]
authors = ["Flaviu Vlaicu"]
edition = "2021"

include = [
    "Cargo.toml",
    "LICENSE",
    "sample_token-generator.yaml",
    "src/**/*",
    "*help.arg",
]

[[bin]]
name = "sra-token"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["use_pem", "rust_crypto"] }
serde = { version = "1.0.215", features = ["derive"], default-features = false }
serde_yaml = { version = "0.9.34", default-features = false }
dirs = { version = "5.0.1", default-features = false }
clap_lex = { version = "0.7.3", default-features = false }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
thiserror = { version = "1.0.69", default-features = false }

sra-core = { path = "../sra-core" , default-features = false }
